# convergio-knowledge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-knowledge/: Cargo.toml  build.rs
crates/convergio-knowledge/src/: embedder.rs  ext.rs  hooks.rs  lib.rs  mcp_defs.rs  pruning.rs  routes.rs  seed.rs  seed_parsers.rs  store.rs  store_pruning.rs  types.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-040-vector-knowledge-store.md
