[workspace]
resolver = "2"
members = ["crates/convergio-knowledge"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-knowledge"

[workspace.dependencies]
# SDK dependencies
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9", version = "0.1.6" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9", version = "0.1.6" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }

# Vector store deps
lancedb = "0.27.2"
arrow-array = "57.2"
arrow-schema = "57.2"
fastembed = "5.13.1"
futures = "0.3"
protobuf-src = "2"

# Utility deps
uuid = { version = "1", features = ["v4"] }
dirs = "5"
