[package]
name = "convergio-knowledge"
description = "Vector knowledge store — semantic memory for agents via embeddings"
version = "0.1.4"
edition.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
fastembed = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "test-util"] }
